added leave interface

--- a/LeaveMGTSystem/Views/LeaveTypes/Delete.cshtml
+++ b/LeaveMGTSystem/Views/LeaveTypes/Delete.cshtml
@@ -1,4 +1,7 @@
-@model LeaveMGTSystem.Models.LeaveType
+@using LeaveMGTSystem.Models.LeaveTypes
+
+
+@model LeaveTypeReadOnlyVM
 
 @{
     ViewData["Title"] = "Delete Leave Type";
