--- a/LeaveMGTSystem/Views/LeaveTypes/Index.cshtml
+++ b/LeaveMGTSystem/Views/LeaveTypes/Index.cshtml
@@ -1,5 +1,5 @@
 @using LeaveMGTSystem.Models.LeaveTypes
-@model IEnumerable<IndexVM>
+@model IEnumerable<LeaveTypeReadOnlyVM>
 
 @{
     ViewData["Title"] = "Index";
