--- a/LeaveMGTSystem/Views/LeaveTypes/Create.cshtml
+++ b/LeaveMGTSystem/Views/LeaveTypes/Create.cshtml
@@ -1,4 +1,6 @@
-@model LeaveMGTSystem.Models.LeaveType
+@using LeaveMGTSystem.Models.LeaveTypes
+
+@model LeaveTypeCreateVM
 
 @{
     ViewData["Title"] = "Create Leave Type";
@@ -15,12 +17,13 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <br />
+            <br/>
             <div class="form-group">
                 <label asp-for="NumberOfDays" class="control-label"></label>
                 <input asp-for="NumberOfDays" class="form-control" />
                 <span asp-validation-for="NumberOfDays" class="text-danger"></span>
             </div>
+            <input type="hidden" name="Id" value="12"/>
             <br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-success" />
