--- a/LeaveMGTSystem/Views/LeaveTypes/Details.cshtml
+++ b/LeaveMGTSystem/Views/LeaveTypes/Details.cshtml
@@ -1,4 +1,5 @@
-@model LeaveMGTSystem.Models.LeaveType
+@using LeaveMGTSystem.Models.LeaveTypes
+@model LeaveTypeReadOnlyVM
 
 @{
     ViewData["Title"] = $"{Model.Name} Details";
@@ -9,21 +10,21 @@
 <div>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NumberOfDays)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NumberOfDays)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning">Edit</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning">Edit</a> 
     <a asp-action="Index" class="btn btn-primary">Back to List</a>
 </div>
