--- a/LeaveMGTSystem/Views/LeaveTypes/Edit.cshtml
+++ b/LeaveMGTSystem/Views/LeaveTypes/Edit.cshtml
@@ -1,5 +1,6 @@
-@model LeaveMGTSystem.Models.LeaveType
+@using LeaveMGTSystem.Models.LeaveTypes
 
+@model LeaveTypeEditVM
 @{
     ViewData["Title"] = "Edit Leave Type";
 }
@@ -16,13 +17,13 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <br />
+            <br/>
             <div class="form-group">
                 <label asp-for="NumberOfDays" class="control-label"></label>
                 <input asp-for="NumberOfDays" class="form-control" />
                 <span asp-validation-for="NumberOfDays" class="text-danger"></span>
             </div>
-            <br />
+            <br/>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-warning" />
                 <a asp-action="Index" class="btn btn-primary">Back to List</a>
